--- a/SegmentCutouts.ipynb
+++ b/SegmentCutouts.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "filters = 'F200W F300M F335M F360M F770W F1000W F1130W F2100W'.split()\n",
     "im_dict = {}\n",
-    "dir = '/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/Convolved_Reprojected_to_F2100W/'\n",
+    "dir = ''\n",
     "for filt in filters:\n",
     "    fn = dir + filt + '.fits'\n",
     "    im_dict[filt] = fits.open(fn)[0].data"
@@ -65,7 +65,8 @@
    "execution_count": 30,
    "outputs": [],
    "source": [
-    "segmentation_image = fits.open('/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/GMCcat_ngc0628_12m+7m+tp_co21_native_maxgmc.fits')[0]\n",
+    "seg_path = ''\n",
+    "segmentation_image = fits.open('seg_path')[0]\n",
     "segmentation_image.header['NAXIS'] = 2\n",
     "del segmentation_image.header['NAXIS3']\n",
     "gmc_cat = segmentation_image.data[0,:,:]\n",
@@ -316,7 +317,7 @@
    "source": [
     "#mcf.mcf_gui()\n",
     "\n",
-    "dir = '/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/Convolved_Reprojected_to_F2100W/HST+ALMA Regrid Attempt/'\n",
+    "dir = ''\n",
     "hst_275 = fits.open(dir + 'hst275.fits')[0]\n",
     "alma = fits.open(dir + 'alma.fits')[0]\n",
     "\n",
@@ -385,7 +386,7 @@
    "execution_count": 37,
    "outputs": [],
    "source": [
-    "path = '/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/NGC628/RGB.fits'\n",
+    "path = ''\n",
     "hdr = hst_275.header\n",
     "mcf.saveRGBfits(path, image_RGB, hdr, overwrite=True)\n",
     "im_dict['RGB'] = fits.open(path)[0].data"
@@ -402,10 +403,10 @@
    "execution_count": 38,
    "outputs": [],
    "source": [
-    "path_wide = '/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/NGC628/Segments_RGB_Wide/'\n",
-    "path_narrow = '/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/NGC628/Segments_RGB_Narrow/'\n",
+    "path_wide = ''\n",
+    "path_narrow = ''\n",
     "\n",
-    "flux_table = pd.read_csv('/Users/ryanlessing/Library/CloudStorage/OneDrive-JohnsHopkins/PHANGS/GMC-Photometry/NGC628/fluxtable.csv')"
+    "flux_table = pd.read_csv('')"
    ],
    "metadata": {
     "collapsed": false,
